# inverted_pendulum_project

./: README.md
data_analysis/: exponential_decay.py  non_linear_damping.py  pendulum_daming.py  pendulum_damping.py  pendulum_damping_bk.py  pully_diameter.py  rayleigh_damping.py
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/chapters/: 00_misc.rst  01_introduction.rst  02_hardware.rst  03_software.rst  04_simulation.rst  05_control.rst  control.rst  hardware.rst  interfaces.rst  introduction.rst  simulation.rst  system_modeling.rst
ros2/src/control/: package.xml  setup.py
ros2/src/ivp_cart/: README.md  package.xml  setup.cfg  setup.py
ros2/src/ivp_cart/ivp_cart/: cart.py  main.py  odrive_interface.py
ros2/src/ivp_cart/launch/: ivp_cart.launch.py
ros2/src/ivp_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2/src/ivp_control/include/ivp_control/: ivp_control.h
ros2/src/ivp_control/ivp_control/: control.py  main.py
ros2/src/ivp_control/launch/: ivp_control.launch.py
ros2/src/ivp_control/src/: ivp_control.cc  main.cc
ros2/src/ivp_control/tools/: pole_placement.py
ros2/src/ivp_pendulum/: CMakeLists.txt  package.xml
ros2/src/ivp_pendulum/include/ivp_pendulum/: ivp_pendulum.h
ros2/src/ivp_pendulum/launch/: ivp_pendulum.launch.py
ros2/src/ivp_pendulum/src/: config.h  ivp_pendulum.cc  main.cc
ros2/src/ivp_pendulum/tools/pendulum_data/: data_sampler.cpp  pendulum_analyze.py  velocity_filters.py
ros2/src/ivp_pendulum/tools/pendulum_data/position_data_sets/: cw_sample_set0.csv  cw_sample_set1.csv  cw_sample_set10.csv  cw_sample_set11.csv  cw_sample_set12.csv  cw_sample_set2.csv  cw_sample_set3.csv  cw_sample_set4.csv  cw_sample_set5.csv  cw_sample_set6.csv  cw_sample_set7.csv  cw_sample_set8.csv  cw_sample_set9.csv
ros2/src/pendulum/: CMakeLists.txt  package.xml
ros2/src/pendulum/src/: pendulum.cpp
